# xcfg-old

./: .gitignore  README.md  setup.cfg  tox.ini
docs/: xcfg.md  xcfg.zh-cn.md
docs/pics/: xcfg_name.drawio  ~$xcfg_name.drawio.bkp
xcfg/: __init__.py
xcfg/cmd/: xcfg.py  xcfg_show.py
xcfg/utils/: config.py  parser.py
