[metadata]
name = xcfg
version = attr: xcfg.__version__
keywords = xcfg, config
description = Support mutual conversion of INI, XML, JSON, YAML and Python.
author = Zou Mingzhe
author_email = zoumingzhe@qq.com
url = https://github.com/zoumingzhe/xcfg
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
project_urls =
    Source Code = https://github.com/zoumingzhe/xcfg
    Bug Tracker = https://github.com/zoumingzhe/xcfg/issues
    Documentation = https://github.com/zoumingzhe/xcfg

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
packages = find:

[options.entry_points]
console_scripts =
    xcfg = xcfg.cmd.xcfg:main
    xcfg-show = xcfg.cmd.xcfg_show:main

[options.packages.find]
include = xcfg*
exclude =
    tests
